--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"type": "module",
 	"dependencies": {
 		"d3": "^7.8.5",
+		"dotenv": "^16.3.1",
 		"layercake": "^8.0.2",
 		"node-fetch": "^3.3.2"
 	}
